[gd_scene load_steps=4 format=2]

[ext_resource path="res://modules/Powerlines/PowerLine/PowerLine.tscn" type="PackedScene" id=1]
[ext_resource path="res://modules/Player/plugins/Interact/interact.gd" type="Script" id=2]
[ext_resource path="res://modules/Player/plugins/Interact/interactable.png" type="Texture" id=3]

[node name="Interact" type="Spatial"]
script = ExtResource( 2 )
PowerLineScene = ExtResource( 1 )

[node name="PickupRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 8

[node name="WireRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 32

[node name="ClipRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 512

[node name="HoldPosition" type="Position3D" parent="."]

[node name="CenterDot" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 3.42188, 3.42188 )
texture = ExtResource( 3 )

[node name="Sounds" type="Node" parent="."]

[node name="WireReelAudio" type="AudioStreamPlayer" parent="Sounds"]

[node name="WirePlaceAudio" type="AudioStreamPlayer" parent="Sounds"]

[node name="WireClipAudio" type="AudioStreamPlayer" parent="Sounds"]
